# NameGenerator

./: CMakeLists.txt  README.md
include/: NameGenerator.hpp  ProfileData.hpp
src/: NameGenerator.cpp  ProfileData.cpp  main.cpp
